# system-allocation-poc

./: Cargo.toml  README.md  docker-compose.yaml  sqlx-data.json
migrations/: 20221119171458_init.sql
src/: lib.rs
tests/: database.rs
