[package]
name = "allocation-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bitflags = "1.3.2"
chrono = "0.4.23"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "offline"] }
uuid = { version = "1.1", features = ["v4"] }

[dev-dependencies]
rand = "0.8.5"
